# GEP

myengine/: CMakeLists.txt
myengine/src/game/: CMakeCache.txt  game.h  main.cpp
myengine/src/myengine/: Component.cpp  Component.h  Core.cpp  Core.h  Entity.cpp  Entity.h  NativeWindow.cpp  NativeWindow.h  Transform.cpp  Transform.h  TriangleRenderer.cpp  TriangleRenderer.h  myengine.h
myengine/src/rend/: rendgl.h  rendsdl.h
